# zmq-sqlite3

./: .gitignore  .gitmodules  README.org
clients/: CMakeLists.txt  main.cc  message.hh
server/: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cc
server/logs/: README.org
server/src/: logs.hh  message.hh  sqlite_interface.cc  sqlite_interface.hh
